--- a/cesar_xamarin/Cesar_xamarin/Cesar_xamarin.UWP/Cesar_xamarin.UWP.csproj
+++ b/cesar_xamarin/Cesar_xamarin/Cesar_xamarin.UWP/Cesar_xamarin.UWP.csproj
@@ -155,6 +155,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Bcl.Build">
+      <Version>1.0.21</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>5.1.0</Version>
     </PackageReference>
