--- a/cesar_xamarin/Cesar_xamarin/Cesar_xamarin/packages.config
+++ b/cesar_xamarin/Cesar_xamarin/Cesar_xamarin/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmLightLibs" version="5.4.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="portable45-net45+win8+wpa81" />
