--- a/cesar_xamarin/Cesar_xamarin/Cesar_xamarin/Cesar_xamarin.csproj
+++ b/cesar_xamarin/Cesar_xamarin/Cesar_xamarin/Cesar_xamarin.csproj
@@ -42,6 +42,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\Border.cs" />
     <Compile Include="Models\Currency.cs" />
     <Compile Include="Models\Land.cs" />
     <Compile Include="Models\Language.cs" />
